crates/language-v2/tests/src/fail/p3_references/cross_context_reference/test.stderr
error: Reference 'Two' is in context 'ContextA', but expected context 'ContextB'.
  --> src/fail/p3_references/cross_context_reference/test.rs:27:71
   |
27 |                     Struct(name = Three, fields = (field_1 = Required(Two))),
   |                                                                       ^^^
